# pjecz-perseo-api-key

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: gcloud-app-deploy.yml
lib/: fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  safe_string.py  universal_mixin.py
perseo/: app.py
perseo/core/autoridades/: models.py
perseo/core/bitacoras/: models.py
perseo/core/distritos/: models.py
perseo/core/entradas_salidas/: models.py
perseo/core/modulos/: models.py
perseo/core/nominas/: models.py
perseo/core/permisos/: models.py
perseo/core/personas/: models.py
perseo/core/puestos/: models.py
perseo/core/roles/: models.py
perseo/core/tabuladores/: models.py
perseo/core/tareas/: models.py
perseo/core/timbrados/: models.py
perseo/core/usuarios/: models.py
perseo/core/usuarios_roles/: models.py
perseo/v4/autoridades/: crud.py  paths.py  schemas.py
perseo/v4/bitacoras/: crud.py  paths.py  schemas.py
perseo/v4/distritos/: crud.py  paths.py  schemas.py
perseo/v4/entradas_salidas/: crud.py  paths.py  schemas.py
perseo/v4/modulos/: crud.py  paths.py  schemas.py
perseo/v4/nominas/: crud.py  paths.py  schemas.py
perseo/v4/permisos/: crud.py  paths.py  schemas.py
perseo/v4/personas/: crud.py  paths.py  schemas.py
perseo/v4/puestos/: crud.py  paths.py  schemas.py
perseo/v4/roles/: crud.py  paths.py
perseo/v4/tabuladores/: crud.py  paths.py  schemas.py
perseo/v4/tareas/: crud.py  paths.py  schemas.py
perseo/v4/timbrados/: crud.py  paths.py  schemas.py
perseo/v4/usuarios/: authentications.py  crud.py  paths.py  schemas.py
perseo/v4/usuarios_roles/: crud.py  paths.py  schemas.py
pjecz_perseo_api_key/: main.py  settings.py
pjecz_perseo_api_key/dependencies/: authentications.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  safe_string.py
pjecz_perseo_api_key/models/: autoridades.py  bitacoras.py  distritos.py  entradas_salidas.py  modulos.py  nominas.py  permisos.py  personas.py  puestos.py  tabuladores.py  tareas.py  timbrados.py  usuarios.py  usuarios_roles.py
pjecz_perseo_api_key/routers/: autoridades.py  bitacoras.py  distritos.py  entradas_salidas.py  modulos.py  nominas.py  personas.py  puestos.py  tabuladores.py  tareas.py  timbrados.py  usuarios.py  usuarios_roles.py
pjecz_perseo_api_key/schemas/: autoridades.py  bitacoras.py  distritos.py  entradas_salidas.py  modulos.py  nominas.py  permisos.py  personas.py  puestos.py  tabuladores.py  tareas.py  timbrados.py  usuarios.py  usuarios_roles.py
tests/: __init__.py  test_autoridades.py  test_distritos.py  test_personas.py  test_puestos.py  test_tabuladores.py  test_timbrados.py  test_usuarios.py
