[tool.poetry]
name = "pjecz-perseo-api-key"
version = "0.1.0"
description = "API con autentificación para realizar operaciones con la base de datos de Perseo"
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "pjecz_perseo_api_key"}]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.7"
fastapi = "^0.108.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.14"}
google-auth = "^2.25.2"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.17.0"
google-cloud-storage = "^2.14.0"
gunicorn = "^21.2.0"
hashids = "^1.3.1"
sqlalchemy = "^2.0.24"
sqlalchemy-utils = "^0.41.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
unidecode = "^1.3.7"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pylint = "^3.0.3"
pylint-sqlalchemy = "^0.3.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256

[tool.isort]
line_length = 256
profile = "black"
